Fix code snippets wrapping onto next lines

--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -101,6 +101,5 @@ $search-box-border-color: #666 !default;
 // These settings are probably best left alone.
 
 %break-words {
-    word-break: break-all;
     hyphens: auto;
 }
